== HEAD

Features:
* Setting the html_ or text_part to nil removes it (jeremy)
* Close pull request 399 - Accept :ca_path and :ca_file options for SMTP delivery (ndbroadbent)

Performance:
* Close pull request 488 - Speed up field construction & comparison (bpot)

Bugs:
* Fix that declaring an html_part but no text_part would use multipart/alternative anyway (jeremy)
* Close pull request 487 - Extract comments from group email addresses (bpot)
* Close pull request 481 - Correctly quote filename attributes (bpot)
* Close pull request 471 - Fix Ruby 1.8 build when UTF16/32 default to little-endian (kennyj)

Housekeeping:
* Close pull request 499 - Clean up some dead code (ConradIrwin)
* Close pull request 489, 495 - Docs typos (JackDanger, francois)
* Close pull request 485 - Be explicit about unsupported address parsing (bpot)
* Close pull request 484 - Remove #tree specs in preparation for deprecation removal (bpot)
* Close pull request 482 - Update address field specs to reflect to #initialize API (bpot)
* Close pull request 475 - Shush warning on Object#blank? redefinition (amatsuda)

== Version 2.5.3 - Sun Dec 4 15:52:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Close pull request 468 - Remove debug output to STDOUT (tadman)
* Fix up spec warnings
* Remove un needed require
* Ensure spec_helper constants only defined once
* Use stub against time instead of DateTime to avoid double redefinition error

== Version 2.5.2 - Sun Nov 18 15:01:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Removing double loading of treetop parsers to remove warnings
* Making parsers auto compile on spec suite and load in production code to avoid error that caused yank of 2.5.0
* Reapply pull request 443 - CC fields with semicolon are now parsed right (paulwittmann)

== Version 2.5.1 - Sun Nov 18 14:01:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Yanked 2.5.0
* Reverted pull request 443 - CC fields with semicolon are now parsed right (paulwittmann)
